@@ -213,7 +213,7 @@ if ($data['screen']['screenid']) {
 	$tabs->setFooter(makeFormFooter(
 		new CSubmit('update', _('Update')),
 		[
-			new CSubmit('clone', _('Clone')),
+			(new CSimpleButton(_('Clone')))->setId('clone'),
 			new CButtonDelete(_('Delete screen?'), url_params(['form', 'screenid', 'templateid'])),
 			new CButtonCancel(url_param('templateid'))
 		]
